--- a/financial_planning_tools.ipynb
+++ b/financial_planning_tools.ipynb
@@ -2856,7 +2856,7 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "**Answer** # YOUR ANSWER HERE"
+    "**Answer** # Unfortunately, weighting the portfolio more heavily to stocks will not provide a reliable mechanism for retirement within ten years. "
    ]
   },
   {
