--- a/financial_planning_tools.ipynb
+++ b/financial_planning_tools.ipynb
@@ -2853,18 +2853,13 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "**Answer** # Unfortunately, weighting the portfolio more heavily to stocks will not provide a reliable mechanism for retirement within ten years. "
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "**Answer** Unfortunately, weighting the portfolio more heavily to stocks will not provide a reliable mechanism for retirement within ten years. "
+   ]
   }
  ],
  "metadata": {
